fix: Fixed the width of the main container which added extra horizontal scrolling

--- a/public/styles.css
+++ b/public/styles.css
@@ -66,7 +66,7 @@ header form button:hover {
 
 .main-container {
   display: flex;
-  width: 100vw;
+  /* width: 100vw; */
   height: 85vh;
 }
 
